ttyrecall/src/tui/snapshots/ttyrecall__tui__ui__tests__draw_recordings_search_editing.snap
---
source: ttyrecall/src/tui/ui.rs
expression: snapshot
---
┌ Activity: alice | filter $DATE ───┐┌ Preview: Preview ──────────────────────────────────────┐
│$DATE to $DATE                ││Select a recording to preview it here.                  │
│Sun                                     ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│Wed                                     ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│Sat                                 []  ││                                                        │
└────────────────────────────────────────┘│                                                        │
┌ Search: needle ────────────────────────┐│                                                        │
│> first.cast $DATE 2.0 KB          ││                                                        │
│  second.cast $DATE 2.0 KB         ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
Ready |  q quit  / search  esc clear search  d delete  c clear filter  click/drag resize  ctrl-left/
