ttyrecall/src/tui/snapshots/ttyrecall__tui__ui__tests__draw_uses_vertical_main_split_on_narrow_layout.snap
---
source: ttyrecall/src/tui/ui.rs
expression: snapshot
---
┌ Activity: alice ─────────────────────────────────────────────────────────────┐
│$DATE to $DATE                                                      │
│Sun                                                                           │
│                                                                              │
│                                                                              │
│Wed                                                                           │
│                                                                              │
│                                                                              │
│Sat                                                 []                        │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Recordings (2) ──────────────────────────────────────────────────────────────┐
│> first.cast $DATE 2.0 KB                                                │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Preview: Preview ────────────────────────────────────────────────────────────┐
│Select a recording to preview it here.                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Ready |  q quit  / search  esc clear search  d delete  c clear filter  click/dra
